# TIBER-Fantasy

./: .env.example  .eslintrc.json  .gitignore  .replit  AGENT_BOOTSTRAP.md  AGENT_HANDOFF_GUIDE.md  AGENT_README.md  API_MAP.md  API_REFERENCE_QUICK.md  ARCHITECTURE.md  AUDIT.md  BACKLOG.md  CHANGELOG.md  CHANGELOG_v2.md  CLAUDE.md  CLAUDE_COORDINATION.md  CLEANUP_COMPLETION_SUMMARY.md  CODEBASE_MAP.md  CROSSOVER_ANALYSIS.md  CURRENT_PHASE.md  DATA_ARCHITECTURE_MAP.md  DATA_CONTEXT_NEEDS.md  DEEPSEEK_V3.1_SCORING_METHODOLOGY.md  DEEPSEEK_V3_1_SYSTEM_BUNDLE.md  DIAGNOSTICS_REPORT.md  ENDPOINT_STATUS_REPORT.md  ETL_PIPELINE_SUMMARY.md  FORGE_VALIDATION_CHECKPOINT.md  GROK_TASKS.md  IMPLEMENTATION_ROADMAP.md  INTELLIGENCE_API.md  LEGAL_ANALYSIS.md  LEGAL_COMPLIANCE.md  LIVE_DATA_INTEGRATION_COMPLETE.md  METRICS_ROADMAP.md  MainPlayerSystem.json  PHASE_2_PLAN.md  PIPELINE_SUMMARY.md  PLAYER_COMPASS_METHODOLOGY.md  PROGRESS_CHECKPOINT.md  (+150 more)
.agents/: agent_assets_metadata.toml
.claude/: AGENTS.md  context-log.md  conventions.md  settings.local.json
archive/: CONSOLIDATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  REPOSITORY_INTEGRATION_PLAN_COMPLETE.md  SLEEPER_ROUTES_BATCH_2_COMPLETE.md  SLEEPER_ROUTES_BATCH_3_COMPLETE.md  SLEEPER_ROUTES_BATCH_5_COMPLETE.md
attached_assets/: Aug 24 _1756038739176.txt  Download rookie_batch_2_1753451074220.json  Download rookie_batch_4_1753451734732.json  Download: WR_2024_Ratings_With_Tags_1753359287914.csv  PATCH_SYNTHTAKE_1755785857731.txt  Pasted---1763508741548_1763508741549.txt  (+617 more)
blueprints/: __init__.py  rankings.py
routes/: trade.py  (+20 more)
(+1877 files in other folders)
