[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "flask==3.0.3",
    "modules>=1.0.0",
    "nfl-data-py>=0.3.3",
    "numpy>=1.26.4",
    "pandas>=1.5.3",
    "requests==2.32.3",
    "schedule>=1.2.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
]
